# akra-trader

./: .gitignore  AGENTS.md  DESIGN.md  README.md  docker-compose.yml
apps/api/: README.md  pyproject.toml
apps/api/src/akra_trader/: __init__.py  api.py  api_filter_helpers.py  api_provider_provenance_routes.py  api_provider_provenance_routes_exports.py  api_provider_provenance_routes_governance.py  api_request_models_core.py  api_request_models_narrative.py  api_request_models_scheduled.py  api_request_models_search.py  api_request_payload_models.py  application.py  application_context.py  application_core_mixin.py  application_guarded_live_consistency_mixin.py  bootstrap.py  (+19 more)
apps/api/tests/: application_test_support.py  test_api.py  test_api_guarded_live.py  test_api_query_contracts.py  test_application.py  test_application_provider_provenance_surfaces.py  test_application_provider_recovery_matrix_a.py  test_application_provider_recovery_matrix_b.py  test_application_provider_recovery_matrix_c.py  test_application_run_execution_and_comparison.py  test_bootstrap.py  test_config.py  test_domain.py  test_lineage.py  test_main.py  test_market_data.py  test_market_data_sync.py  test_operator_delivery.py  test_operator_delivery_provider_matrix_a.py  test_operator_delivery_provider_matrix_b.py  test_operator_delivery_provider_matrix_c.py  test_operator_delivery_provider_matrix_d.py  test_provider_provenance_scheduler.py  test_provider_provenance_search.py  test_purge_reference_runs.py  test_reference.py  test_sqlalchemy_compact_identifiers.py  test_venue_execution.py
(+829 files in other folders)
