[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "akra-trader-api"
version = "0.1.0"
description = "Hexagonal trading platform backend for strategy research, backtesting, and paper trading."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ccxt>=4.4.0,<5.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "joblib>=1.4.0,<2.0.0",
  "numpy>=2.1.0,<3.0.0",
  "pandas>=2.2.0,<3.0.0",
  "pyarrow>=18.0.0,<20.0.0",
  "pydantic>=2.9.0,<3.0.0",
  "psycopg[binary]>=3.2.0,<4.0.0",
  "sqlalchemy>=2.0.0,<3.0.0",
  "uvicorn>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0,<1.0.0",
  "pytest>=8.3.0,<9.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/akra_trader"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
